## Process this file with automake to produce Makefile.in

SUBDIRS = ctags scintilla src plugins icons po doc data tests

AUTOMAKE_OPTIONS =	1.7

ACLOCAL_AMFLAGS = -I m4
AM_DISTCHECK_CONFIGURE_FLAGS = --enable-api-docs --enable-html-docs --enable-pdf-docs \
                               --enable-gtkdoc-header

WIN32_BUILD_FILES = \
	geany_private.rc \
	geany.exe.manifest

EXTRA_DIST = \
	autogen.sh \
	scripts/gen-api-gtkdoc.py \
	geany.desktop.in \
	geany.pc.in \
	geany.spec \
	ChangeLog.pre-1-22 \
	HACKING \
	README.I18N \
	README.Packagers \
	po/intl_stats.sh \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	$(WIN32_BUILD_FILES)

DISTCLEANFILES = \
	geany.desktop \
	intltool-extract \
	intltool-merge \
	intltool-update

uninstall-local:
	rm -rf $(DESTDIR)$(pkgdatadir);

# manually install some files under another name
install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)
	$(INSTALL_DATA) $(srcdir)/COPYING $(DESTDIR)$(pkgdatadir)/GPL-2
if MINGW
	$(INSTALL_DATA) $(srcdir)/AUTHORS $(DESTDIR)$(prefix)/Authors.txt
	$(INSTALL_DATA) $(srcdir)/ChangeLog $(DESTDIR)$(prefix)/Changelog.txt
	$(INSTALL_DATA) $(srcdir)/COPYING $(DESTDIR)$(prefix)/Copying.txt
	$(INSTALL_DATA) $(srcdir)/README $(DESTDIR)$(prefix)/Readme.txt
	$(INSTALL_DATA) $(srcdir)/NEWS $(DESTDIR)$(prefix)/News.txt
	$(INSTALL_DATA) $(srcdir)/THANKS $(DESTDIR)$(prefix)/Thanks.txt
	$(INSTALL_DATA) $(srcdir)/TODO $(DESTDIR)$(prefix)/Todo.txt
endif

dist-hook:
	@if test -d "$(top_srcdir)/.git"; then \
		echo '  GEN    ChangeLog'; \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.' && echo && \
		  git log --stat 0.21.0.. ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp "$(distdir)/ChangeLog" \
		|| ( rm -f ChangeLog.tmp ; \
		     echo 'Failed to generate ChangeLog' >&2 ); \
	else \
		echo 'A git clone is required to generate a ChangeLog' >&2; \
	fi


sign:
	if test -f $(PACKAGE)-$(VERSION).tar.gz; then \
		gpg --detach-sign --digest-algo SHA512 $(PACKAGE)-$(VERSION).tar.gz; fi
	if test -f $(PACKAGE)-$(VERSION).tar.bz2; then \
		gpg --detach-sign --digest-algo SHA512 $(PACKAGE)-$(VERSION).tar.bz2; fi


rpm: dist
	rpmbuild -ta $(distdir).tar.gz


pkgconfig_DATA = geany.pc
pkgconfigdir = $(libdir)/pkgconfig

desktopdir = $(datadir)/applications
desktop_in_files = geany.desktop
desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
@INTLTOOL_DESKTOP_RULE@
